shellclear/tests/snapshots/sensitive_patterns_test__gitlab_token.snap
---
source: shellclear/tests/sensitive-patterns_test.rs
expression: results
---
[
    TestPatternResult {
        name: "detect gitlab token environment variable",
        test: "GITLAB_TOKEN=shellclear",
        detect: "shellclear",
        expected: "shellclear",
    },
]
