shellclear/tests/snapshots/sensitive_patterns_test__hashicorp_env_console_http_token.snap
---
source: shellclear/tests/sensitive-patterns_test.rs
expression: results
---
[
    TestPatternResult {
        name: "detect hashicorp Env console HTTP token",
        test: "CONSUL_HTTP_TOKEN=shellclaer",
        detect: "shellclaer",
        expected: "shellclaer",
    },
]
