shellclear/tests/snapshots/sensitive_patterns_test__hashicorp_env_vault_token.snap
---
source: shellclear/tests/sensitive-patterns_test.rs
expression: results
---
[
    TestPatternResult {
        name: "detect hashicorp Env Vault Token",
        test: "VAULT_TOKEN=shellclear",
        detect: "shellclear",
        expected: "shellclear",
    },
]
