shellclear/tests/snapshots/sensitive_patterns_test__heroku_api_key.snap
---
source: shellclear/tests/sensitive-patterns_test.rs
expression: results
---
[
    TestPatternResult {
        name: "detect Heroku API Key",
        test: "HEROKU_API_KEY=\"B2222202-A12C-11C4-911E-1236B11AA123\"",
        detect: "HEROKU_API_KEY=\"B2222202-A12C-11C4-911E-1236B11AA123\"",
        expected: "B2222202-A12C-11C4-911E-1236B11AA123",
    },
]
