shellclear/tests/snapshots/sensitive_patterns_test__heroku_env_api_key.snap
---
source: shellclear/tests/sensitive-patterns_test.rs
expression: results
---
[
    TestPatternResult {
        name: "detect Heroku Env api key",
        test: "HEROKU_API_KEY=shellclear",
        detect: "shellclear",
        expected: "shellclear",
    },
]
