shellclear/tests/snapshots/sensitive_patterns_test__linkedin_secret_key.snap
---
source: shellclear/tests/sensitive-patterns_test.rs
expression: results
---
[
    TestPatternResult {
        name: "detect LinkedIn Secret Key",
        test: "linkedin=\"L1lljioTz0861Upl\"",
        detect: "L1lljioTz0861Upl",
        expected: "L1lljioTz0861Upl",
    },
]
