shellclear/tests/snapshots/sensitive_patterns_test__mail_gun_api_key.snap
---
source: shellclear/tests/sensitive-patterns_test.rs
expression: results
---
[
    TestPatternResult {
        name: "detect MailGun API Key",
        test: "key-123asZSDWq1331shellclearshellclear",
        detect: "key-123asZSDWq1331shellclearshellcle",
        expected: "key-123asZSDWq1331shellclearshellcle",
    },
]
