shellclear/tests/snapshots/sensitive_patterns_test__newrelic_env_api_key.snap
---
source: shellclear/tests/sensitive-patterns_test.rs
expression: results
---
[
    TestPatternResult {
        name: "detect Newrelic Env api key",
        test: "NEWRELIC_API_KEY=shellclear",
        detect: "shellclear",
        expected: "shellclear",
    },
]
