shellclear/tests/snapshots/sensitive_patterns_test__readme_api_key.snap
---
source: shellclear/tests/sensitive-patterns_test.rs
expression: results
---
[
    TestPatternResult {
        name: "detect ReadMe io Api Key",
        test: "README_API_KEY=shellclear",
        detect: "shellclear",
        expected: "shellclear",
    },
]
