shellclear/tests/snapshots/sensitive_patterns_test__sendgrid_api_key.snap
---
source: shellclear/tests/sensitive-patterns_test.rs
expression: results
---
[
    TestPatternResult {
        name: "detect SendGrid API Key",
        test: "SG.shellcleardH0bSHADAAs2.9Shellclaer_SdadvcCFG33dsSDFDDshellshellshellshellshell",
        detect: "SG.shellcleardH0bSHADAAs2.9Shellclaer_SdadvcCFG33dsSDFDDshellshellshe",
        expected: "SG.shellcleardH0bSHADAAs2.9Shellclaer_SdadvcCFG33dsSDFDDshellshellshe",
    },
]
